Fix z-index

--- a/resources/css/base/base_dropdown.scss
+++ b/resources/css/base/base_dropdown.scss
@@ -69,6 +69,7 @@
         opacity: 0;
         visibility: hidden;
         transition: opacity $animation $animation_time, visibility $animation $animation_time;
+        z-index: 10;
 
         &-top {
             top: unset;
